fix: added URL for style.css

--- a/wp-content/themes/vmv-theme/style.css
+++ b/wp-content/themes/vmv-theme/style.css
@@ -1,13 +1,13 @@
 /**
- * Theme Name:  Vmv Theme
+ * Theme Name:  vmv-theme
  * Description: Новостной портал со статьями
  * 
- * Theme URI:   URL темы. Пр: http://wordpress.org/themes/twenty
+ * Theme URI:   http://wordpress-developer/
  * Author:      Mike Velit
- * Author URI:  URL автора
+ * Author URI:  http://wordpress-developer/
  *
  * Tags:        black, brown, orange
- * Text Domain: vmvtheme
+ * Text Domain: vmv-theme
  *
  * License:     Лицензия. Пр: GNU General Public License v2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
