--- a/wp-content/themes/vmv-theme/assets/sass/vmv-theme.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/vmv-theme.sass
@@ -1,4 +1,6 @@
 // Подключаем шрифты
 @import 'fonts'
-@import 'header'
 @import 'grid'
+@import 'header'
+// Информация об авторе поста
+@import 'hero'
