--- a/wp-content/themes/vmv-theme/assets/sass/_hero.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_hero.sass
@@ -11,13 +11,22 @@
 		display: flex
 		flex-direction: column
 		justify-content: space-between
+		&::after
+			content: ""
+			position: absolute
+			z-index: -1
+			width: 100%
+			height: 100%
+			left: 0
+			top: 0
+			background-color: rgba(#40303D, 0.35)
 		.post-thumb
 			position: absolute
 			left: 0
 			top: 0
 			bottom: 0
 			right: 0
-			z-index: -1
+			z-index: -2
 		.author
 			display: flex
 			align-items: center
@@ -35,5 +44,12 @@
 			width: 45px
 			height: 45px
 			border-radius: 50%
+		.category-name
+			color: #4592FF
+			font-weight: 900
+			font-size: 12px
+			line-height: 15px
+			text-transform: uppercase
+			text-decoration: none
 	.right
 		flex-basis: 25%
