--- a/wp-content/themes/vmv-theme/assets/sass/_hero.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_hero.sass
@@ -51,5 +51,14 @@
 			line-height: 15px
 			text-transform: uppercase
 			text-decoration: none
+		.post
+			&-title
+				font-weight: bold
+				font-size: 40px
+				line-height: 50px
+				color: #ffffff
+				font-family: 'Roboto Slab', serif
+				margin-top: 20px
+				margin-bottom: 50px
 	.right
 		flex-basis: 25%
