--- a/wp-content/themes/vmv-theme/assets/sass/_hero.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_hero.sass
@@ -60,5 +60,16 @@
 				font-family: 'Roboto Slab', serif
 				margin-top: 20px
 				margin-bottom: 50px
+		.more
+			display: inline-block
+			color: #ffffff
+			padding: 10px 20px
+			padding-right: 50px
+			background: #4592FF
+			border-radius: 20px
+			text-decoration: none
+			background-image: url('../images/arrow.svg')
+			background-repeat: no-repeat
+			background-position: center right 20px
 	.right
 		flex-basis: 25%
