--- a/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
+++ b/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
@@ -115,6 +115,18 @@ body {
 
 .front-page-header {
   background-color: #262D33;
+  position: relative;
+}
+
+.front-page-header::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #E5E5E5;
+  width: 100%;
+  height: 20%;
+  z-index: 0;
 }
 
 .hero {
@@ -125,6 +137,8 @@ body {
   border-radius: 10px;
   min-height: 570px;
   background-color: #fff;
+  position: relative;
+  z-index: 1;
 }
 
 .hero .left {
@@ -260,11 +274,11 @@ body {
 .hero .post {
   padding: 17px 25px 19px 25px;
   margin: 0;
-  border-top: 1px solid  #D9DADB;
+  border-top: 1px solid	#D9DADB;
   min-height: 100px;
 }
 
-.hero .post:nth-child(even) {
+.hero .post:hover {
   background-color: #F5F5F5;
 }
 
