create: bg-color for home

--- a/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
+++ b/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
@@ -113,7 +113,12 @@ body {
   cursor: pointer;
 }
 
+.home {
+  background-color: #E5E5E5;
+}
+
 .front-page-header {
+  padding-top: 30px;
   background-color: #262D33;
   position: relative;
 }
