--- a/wp-content/themes/vmv-theme/assets/sass/_hero.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_hero.sass
@@ -1,4 +1,7 @@
+.home
+	background-color: #E5E5E5	
 .front-page-header
+	padding-top: 30px
 	background-color: #262D33
 	position: relative
 	&::after
