--- a/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
+++ b/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
@@ -121,17 +121,7 @@ body {
   padding-top: 30px;
   background-color: #262D33;
   position: relative;
-}
-
-.front-page-header::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #E5E5E5;
-  width: 100%;
-  height: 20%;
-  z-index: 0;
+  height: 470px;
 }
 
 .hero {
@@ -218,7 +208,12 @@ body {
   border-radius: 50%;
 }
 
-.hero .left .category-name {
+.hero .left .post-categories {
+  padding: 0;
+  margin: 0;
+}
+
+.hero .left .post-categories a {
   color: #4592FF;
   font-weight: 900;
   font-size: 12px;
@@ -235,6 +230,7 @@ body {
   font-family: 'Roboto Slab', serif;
   margin-top: 20px;
   margin-bottom: 50px;
+  max-width: 590px;
 }
 
 .hero .left .post-text {
@@ -283,15 +279,27 @@ body {
   min-height: 100px;
 }
 
-.hero .post:hover {
-  background-color: #F5F5F5;
+.hero .post-categories {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
-.hero .post .category-name {
+.hero .post-categories a {
   font-weight: 900;
   font-size: 12px;
   line-height: 15px;
   text-transform: uppercase;
+  text-decoration: none;
+}
+
+.hero .post-permalink {
+  text-decoration: none;
+  color: #4B5157;
+}
+
+.hero .post:hover {
+  background-color: #F5F5F5;
 }
 
 .hero .post-title {
