--- a/wp-content/themes/vmv-theme/assets/sass/_hero.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_hero.sass
@@ -1,18 +1,10 @@
 .home
-	background-color: #E5E5E5	
+	background-color: #E5E5E5
 .front-page-header
 	padding-top: 30px
 	background-color: #262D33
 	position: relative
-	&::after
-		content: ""
-		position: absolute
-		bottom: 0
-		left: 0
-		background-color: #E5E5E5
-		width: 100%
-		height: 20%
-		z-index: 0
+	height: 470px
 .hero
 	// border: 1px solid red
 	display: flex
@@ -66,14 +58,17 @@
 			width: 45px
 			height: 45px
 			border-radius: 50%
-		.category-name
-			color: #4592FF
-			font-weight: 900
-			font-size: 12px
-			line-height: 15px
-			text-transform: uppercase
-			text-decoration: none
 		.post
+			&-categories
+				padding: 0
+				margin: 0
+				a
+					color: #4592FF
+					font-weight: 900
+					font-size: 12px
+					line-height: 15px
+					text-transform: uppercase
+					text-decoration: none
 			&-title
 				font-weight: bold
 				font-size: 40px
@@ -82,6 +77,7 @@
 				font-family: 'Roboto Slab', serif
 				margin-top: 20px
 				margin-bottom: 50px
+				max-width: 590px
 			&-text
 				z-index: 2
 				position: relative
@@ -116,13 +112,21 @@
 		margin: 0
 		border-top: 1px solid	#D9DADB
 		min-height: 100px
+		&-categories
+			padding: 0
+			margin: 0
+			list-style: none
+			a
+				font-weight: 900
+				font-size: 12px
+				line-height: 15px
+				text-transform: uppercase
+				text-decoration: none
+		&-permalink		
+			text-decoration: none
+			color: #4B5157
 		&:hover
 			background-color: #F5F5F5
-		.category-name
-			font-weight: 900
-			font-size: 12px
-			line-height: 15px
-			text-transform: uppercase
 		&-title
 			min-height: 40px
 			font-size: 14px
