--- a/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
+++ b/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
@@ -409,18 +409,8 @@ body {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: 1 / 1 / 2 / 3;
-  padding: 35px 35px 13px 35px;
+  padding: 35px 35px 53px 35px;
   position: relative;
-}
-
-.article-grid-item-1:after {
-  content: '';
-  width: 100%;
-  height: 1px;
-  position: absolute;
-  bottom: 56px;
-  left: 0;
-  background-color: #D9DADB;
 }
 
 .article-grid-item-1 .category-name {
@@ -446,10 +436,16 @@ body {
   font-size: 14px;
   line-height: 20px;
   width: 300px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .article-grid-item-1 .article-grid-info {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 15px 35px;
+  border-top: 1px solid #D9DADB;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
