fix: fix 1st post

--- a/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
+++ b/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
@@ -411,6 +411,7 @@ body {
   grid-area: 1 / 1 / 2 / 3;
   padding: 35px 35px 53px 35px;
   position: relative;
+  overflow: hidden;
 }
 
 .article-grid-item-1 .category-name {
@@ -422,7 +423,7 @@ body {
 }
 
 .article-grid-item-1 .article-grid-title {
-  width: 300px;
+  width: 90%;
   font-family: Roboto Slab;
   font-style: normal;
   font-weight: bold;
@@ -435,7 +436,7 @@ body {
 .article-grid-item-1 .article-grid-excerpt {
   font-size: 14px;
   line-height: 20px;
-  width: 300px;
+  width: 60%;
   margin-bottom: 40px;
 }
 
@@ -446,6 +447,7 @@ body {
   right: 0;
   padding: 15px 35px;
   border-top: 1px solid #D9DADB;
+  background-color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
