--- a/wp-content/themes/vmv-theme/assets/sass/_article-grid.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_article-grid.sass
@@ -23,6 +23,7 @@
 				grid-area: 1 / 1 / 2 / 3
 				padding: 35px 35px 53px 35px
 				position: relative
+				overflow: hidden
 				.category-name
 					font-weight: 900
 					font-size: 12px
@@ -31,7 +32,7 @@
 					color: #6E99AE
 				.article-grid
 					&-title
-						width: 300px
+						width: 90%
 						font-family: Roboto Slab
 						font-style: normal
 						font-weight: bold
@@ -42,7 +43,7 @@
 					&-excerpt
 						font-size: 14px
 						line-height: 20px
-						width: 300px
+						width: 60%
 						margin-bottom: 40px
 					&-info
 						position: absolute
@@ -51,6 +52,7 @@
 						right: 0
 						padding: 15px 35px
 						border-top: 1px solid #D9DADB
+						background-color: #fff
 						display: flex
 						align-items: center
 						justify-content: space-between
