--- a/wp-content/themes/vmv-theme/assets/sass/_article-grid.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_article-grid.sass
@@ -19,6 +19,7 @@
 		&-item
 			border-radius: 10px
 			background-color: #fff
+			overflow: hidden
 			&-1
 				grid-area: 1 / 1 / 2 / 3
 				padding: 35px 35px 53px 35px
@@ -83,5 +84,82 @@
 								margin-left: 5px
 			&-2
 				grid-area: 1 / 3 / 2 / 4
+				position: relative
+				background-color: transparent
+				&::before
+					position: absolute
+					z-index: 0
+					content: ''
+					background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35))
+					width: 100%
+					height: 100%
+				.article-grid
+					&-thumb
+						position: absolute
+						height: 100%
+						width: 100%
+						left: 0
+						top: 0
+						z-index: -1
+						object-fit: cover
+					&-permalink
+						position: absolute
+						right: 0
+						left: 0
+						top: 0
+						bottom: 0
+						height: 100%
+						display: flex
+						flex-direction: column
+						justify-content: space-between
+						align-items: flex-start
+						padding: 25px
+					&-title
+						font-family: Roboto Slab
+						font-style: normal
+						font-weight: bold
+						font-size: 16px
+						line-height: 25px
+						color: #FFFFFF
+						margin-top: 25px
+						margin-bottom: 27px
+				.tag
+					padding: 5px 12px
+					background: #3DC47E
+					border-radius: 3px
+					color: #FFFFFF
+					font-size: 12px
+					line-height: 15px
+					text-transform: capitalize
+				.category-name
+					margin-top: auto
+					color: #E7D9FF
+					font-family: 'Lato Black', sans-serif
+					font-size: 12px
+					line-height: 15px
+					text-transform: uppercase
+				.author
+					display: flex
+					align-items: center
+					&-info
+						color: #FFFFFF
+						display: flex
+						align-items: center
+						flex-wrap: wrap
+						margin-left: 10px
+					&-avatar
+						width: 45px
+						height: 45px
+						border-radius: 50%
+					&-name
+						flex-basis: 100%
+				.date, .comments, .likes
+					opacity: 0.4
+					display: flex
+					align-items: center
+					&:not(:last-child)
+						margin-right: 7px
+					&-counter
+						margin-left: 5px
 			&-3
 				grid-area: 2 / 1 / 4 / 2
