--- a/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
+++ b/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
@@ -366,6 +366,10 @@ body {
   color: #ffffff;
 }
 
+.article-permalink:visited {
+  color: #ffffff;
+}
+
 .article-title {
   font-weight: 400;
   margin: 0;
@@ -382,9 +386,9 @@ body {
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: minmax(min-content, max-content) (1fr)[2];
-      grid-template-rows: minmax(-webkit-min-content, -webkit-max-content) repeat(2, 1fr);
-      grid-template-rows: minmax(min-content, max-content) repeat(2, 1fr);
+  -ms-grid-rows: minmax(min-content, max-content) minmax(200px, max-content) minmax(200px, max-content);
+      grid-template-rows: minmax(-webkit-min-content, -webkit-max-content) minmax(200px, -webkit-max-content) minmax(200px, -webkit-max-content);
+      grid-template-rows: minmax(min-content, max-content) minmax(200px, max-content) minmax(200px, max-content);
   grid-column-gap: 30px;
   grid-row-gap: 30px;
 }
@@ -645,4 +649,60 @@ body {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-area: 2 / 1 / 4 / 2;
+}
+
+.article-grid-item-3 .article-thumb {
+  height: 275px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+}
+
+.article-grid-item-3 .article-grid-title {
+  padding: 15px 25px 35px;
+  font-family: Roboto Slab;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
+  margin: 0;
+}
+
+.article-grid-item-default {
+  position: relative;
+}
+
+.article-grid-item-default .article-grid-permalink {
+  padding: 25px 25px 30px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.article-grid-item-default .article-grid-title {
+  font-family: Roboto Slab;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+.article-grid-item-default .article-grid-excerpt {
+  margin: 0;
+  margin-bottom: auto;
 }
