--- a/wp-content/themes/vmv-theme/assets/sass/_article-list.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_article-list.sass
@@ -25,6 +25,9 @@
 			width: 1px
 			background-color: #4B5157
 			display: block
+	&-thumb
+		width: 65px
+		height: 65px
 
 	&-permalink
 		text-decoration: none
