--- a/wp-content/themes/vmv-theme/assets/sass/_sidebar.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_sidebar.sass
@@ -3,9 +3,22 @@
 		// border: 1px solid red
 		margin-left: 30px
 		margin-top: 30px
-
 		// background-color: #fff
 .widget
+	max-width: 263px
+	// width: 40%
+	background-color: #fff
+	border-radius: 10px
+	margin-bottom: 30px
+	&-title
+		padding: 20px 25px
+		border-bottom: 1px solid #D9DADB
+		font-family: "Lato Black", sans-serif
+		// font-weight: 900
+		font-size: 14px
+		line-height: 20px
+		margin: 0
+		text-transform: uppercase
 	&-downloader
 		background: #3BBDC4 url('../images/file.svg') no-repeat top 22px right 24px
 		border-radius: 10px
@@ -21,6 +34,9 @@
 				font-weight: bold
 				font-size: 16px
 				line-height: 25px
+				border: none
+				padding: 0
+				text-transform: none
 			&-link
 				position: absolute
 				bottom: 0
@@ -45,3 +61,44 @@
 			font-size: 14px
 			line-height: 20px
 			margin: 0
+	.tagcloud
+		display: flex
+		align-items: center
+		justify-content: flex-start
+		flex-wrap: wrap
+		padding: 20px
+		padding-bottom: 35px
+	.tag-cloud-link
+		// width: 40%
+		text-decoration: none
+		padding: 5px 15px
+		border: 1px solid #D9DADB
+		border-radius: 5px
+		margin-right: 10px
+		margin-bottom: 15px
+		line-height: 20px
+		color: #262D33
+	&-socialNetworks
+		padding-bottom: 40px
+		.widget
+			&-title
+				// display: flex
+				border: none
+				padding-right: 25px
+				padding-left: 25px
+				padding-top: 30px
+				padding-bottom: 25px
+				text-align: center
+				text-transform: none
+				font-family: Roboto Slab
+				font-style: normal
+				font-weight: bold
+				font-size: 20px
+				line-height: 25px
+			&-link
+				text-decoration: none
+			&-facebook-icon
+				margin-left: 33px
+			&-twitter-icon
+				margin-right: 20px
+				margin-left: 20px
