fix: height avatar, remane alt

--- a/wp-content/themes/vmv-theme/assets/sass/_article-grid.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_article-grid.sass
@@ -168,7 +168,7 @@
 						flex-wrap: wrap
 						margin-left: 10px
 					&-avatar
-						width: 45px
+						// width: 45px
 						height: 45px
 						border-radius: 50%
 					&-name
