create: added big cover posts

--- a/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
+++ b/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
@@ -240,19 +240,6 @@ body {
   position: relative;
 }
 
-.hero .left .more {
-  display: inline-block;
-  color: #ffffff;
-  padding: 10px 20px;
-  padding-right: 50px;
-  background: #4592FF;
-  border-radius: 20px;
-  text-decoration: none;
-  background-image: url("../images/arrow.svg");
-  background-repeat: no-repeat;
-  background-position: center right 20px;
-}
-
 .hero .right {
   -ms-flex-preferred-size: 25%;
       flex-basis: 25%;
@@ -311,6 +298,23 @@ body {
   font-weight: normal;
   margin-bottom: 0;
   margin-top: 8px;
+}
+
+.more {
+  display: inline-block;
+  color: #ffffff;
+  padding: 10px 20px;
+  padding-right: 50px;
+  background: #4592FF;
+  border-radius: 20px;
+  text-decoration: none;
+  background-image: url("../images/arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+}
+
+.more:visited, .more:focus, .more:hover {
+  color: #fff;
 }
 
 .article-list {
@@ -396,7 +400,7 @@ body {
 
 .article-grid {
   max-width: 850px;
-  margin: 30px 0;
+  margin: 30px 0 60px;
   padding: 0;
   list-style: none;
   display: -ms-grid;
@@ -873,4 +877,21 @@ body {
 .widget-socialNetworks .widget-twitter-icon {
   margin-right: 20px;
   margin-left: 20px;
+}
+
+.investigation {
+  padding: 50px 55px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.investigation-title {
+  font-family: Roboto Slab;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 50px;
+  color: #FFFFFF;
+  max-width: 946px;
+  margin: 0 auto 25px;
 }
