--- a/wp-content/themes/vmv-theme/assets/sass/_hero.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_hero.sass
@@ -82,17 +82,6 @@
 			&-text
 				z-index: 2
 				position: relative
-		.more
-			display: inline-block
-			color: #ffffff
-			padding: 10px 20px
-			padding-right: 50px
-			background: #4592FF
-			border-radius: 20px
-			text-decoration: none
-			background-image: url('../images/arrow.svg')
-			background-repeat: no-repeat
-			background-position: center right 20px
 	.right
 		flex-basis: 25%
 		.recommend
@@ -135,3 +124,16 @@
 			font-weight: normal
 			margin-bottom: 0
 			margin-top: 8px
+.more
+	display: inline-block
+	color: #ffffff
+	padding: 10px 20px
+	padding-right: 50px
+	background: #4592FF
+	border-radius: 20px
+	text-decoration: none
+	background-image: url('../images/arrow.svg')
+	background-repeat: no-repeat
+	background-position: center right 20px
+	&:visited, &:focus, &:hover
+		color: #fff
