--- a/wp-content/themes/vmv-theme/assets/sass/_hero.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_hero.sass
@@ -60,16 +60,6 @@
 			height: 45px
 			border-radius: 50%
 		.post
-			&-categories
-				padding: 0
-				margin: 0
-				a
-					color: #4592FF
-					font-weight: 900
-					font-size: 12px
-					line-height: 15px
-					text-transform: uppercase
-					text-decoration: none
 			&-title
 				font-weight: bold
 				font-size: 40px
@@ -112,7 +102,7 @@
 				line-height: 15px
 				text-transform: uppercase
 				text-decoration: none
-		&-permalink		
+		&-permalink
 			text-decoration: none
 			color: #4B5157
 		&:hover
@@ -137,3 +127,22 @@
 	background-position: center right 20px
 	&:visited, &:focus, &:hover
 		color: #fff
+.category-link
+	color: #4592FF
+	font-weight: 900
+	font-size: 12px
+	line-height: 15px
+	text-transform: uppercase
+	text-decoration: none
+	&:visited
+		color: #4592FF
+	&.web-design
+		color: #FFA34D
+		&:visited
+			color: #FFA34D
+	&.javascript
+		color: #6E99AE
+	&.html
+		color: #AC8EE3
+	&.css
+		color: #3DC47E
